@@ -41,7 +41,7 @@
 #include "nmg.h"
 #include "rtgeom.h"
 #include "raytrace.h"
-#include "bot.h"
+#include "rt/primitives/bot.h"
 
 #include "../../librt_private.h"
 
